style.css
body {
    margin: 0px;
    padding: 0px;
    font-family: "Roboto", system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}
.container {
    display: grid;
    grid-template: 1fr 5fr / 1fr 6fr;
    min-height: 100vh;
}
.sidebar {
    grid-area: 1 / 1 / 3 / 2;
    background-color: #1992D4;
    color: white;
}
.sidebar-content {
    display: grid;
    grid-template-rows: 1fr 2fr 1fr;
    gap: 4em;
    margin-left: 1em;
}
.sidebar-content > * > * {
    line-height: 1.5em;
}
.sidebar-branding {
    display: flex;
    align-content: center;
    align-items: center;
    font-size: 1.5rem;
    gap: 0.3em;
    font-weight: 500;
}
.sidebar-branding-icon {
    filter: invert(95);
}
a {
    color: white;
    text-decoration: none;
    font-size: 1.3rem;
}
.header {
    max-height: 178px;
}
.header-top {
    display: grid;
    grid-template-columns: 3fr 1fr;
    gap: 6em;
    align-items: center;
}
.header-search {
    display: flex;
    margin-left: 3vw;
    gap: 0.7em;
    align-items: center;
}
.header-search input {
    height: 25px;
    border-radius: 20px;
    background-color: #E2E8F0;
    border: none;
    flex-grow: 2;
}
.header-account {
    display: flex;
    gap: 2em;
    align-items: center;
}
.header-pfp img {
    max-height: 60px;
    border-radius: 60px;
}
.header-bottom {
    margin-top: 30px;
    display: grid;
    grid-template-columns: 3fr 1fr;
    align-items: center;
    box-shadow: -1px 7px 7px 0px rgba(0,0,0,0.24);
}
.header-greeting-container {
    display: grid;
    grid-template: 1fr 1fr / 1fr 1.5fr;
    max-width: fit-content;
    margin-left: 3vh;
}
.header-greeting-pfp {
    grid-row: 1 / 3;
}
.header-greeting-pfp img {
    max-height: 80px;
    border-radius: 70px;
}
.header-greeting {
    align-self: center;
}
.header-greeting-name {
    font-size: 1.6rem;
}
.header-actions {
    display: flex;
    align-content: center;
    gap: 1em;
}
.header-actions button {
    height: 40px;
    width: 80px;
    border-radius: 40px;
    background-color: #1992D4;
    color: white;
    border: none;
}
.main {
    grid-area: 2 / 2 / 3 / 4;
    display: grid;
    grid-template: 30px 1fr / 4fr 1.5fr;
    padding-top: 25px;
    padding-left: 2vw;
    font-size: 1.15rem;
    background-color: #E2E8F0;
    gap: 3em;
}
.main-projects {
    grid-column: 1 / 2;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 2em;
}
h4 {
    margin-block: 0;
}
.main-projects-project {
    border-left: 5px solid orange;
    border-radius: 10px;
    background-color: white;
    box-shadow: -1px 7px 7px 0px rgba(0,0,0,0.24);
    display: flex;
    flex-flow: column;
    height: 250px;
    justify-content: space-around;
}
.main-projects-project > * {
    margin-left: 20px;
}
.project-actions {
    display: flex;
    justify-content: end;
    gap: 1.2rem;
}
.main-side-content {
    margin-right: 3em;
}
.side-announcements-box {
    background-color: white;
    height: 400px;
    border-radius: 20px;
    box-shadow: -1px 7px 7px 0px rgba(0,0,0,0.24);
    font-size: 0.9rem;
    align-content: center;
    overflow: scroll;
}
.side-announcements h4 {
    margin-bottom: 10px;
}
.announcements-box-content {
    margin-inline: 2em;
}
.announcements-box-content p {
    margin-top: 5px;
}

